# bevy-app

./: Cargo.toml  README.md
assets/models/sun/: sun.gltf
src/: main.rs
