[package]
name = "bevy-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = "0.18.3"
bevy_editor_pls = "0.4.0"

[profile.dev.package."*"]
opt-level = 3
